--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsx src/server.ts",
     "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
@@ -23,6 +24,7 @@
     "fastify-type-provider-zod": "^6.1.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
+    "pino-pretty": "^13.1.3",
     "zod": "^4.3.5"
   },
   "devDependencies": {
