--- a/fly.toml
+++ b/fly.toml
@@ -1,19 +1,23 @@
-app = "api-xwnkpw"
-primary_region = "ams"
+# fly.toml app configuration file generated for api-xwnkpw on 2026-01-25T04:57:34Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[deploy]
-release_command = "npx prisma migrate deploy"
+app = 'api-xwnkpw'
+primary_region = 'iad'
+
+[build]
 
 [http_service]
-auto_start_machines = true
-auto_stop_machines = true
-force_https = true
-internal_port = 80
-min_machines_running = 0
-processes = [ "app" ]
+  internal_port = 80
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-cpu_kind = "shared"
-cpus = 1
-memory = "1gb"
-memory_mb = 256
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
