--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,9 @@ primary_region = 'iad'
 
 [build]
 
+[deploy]
+  release_command = "npx prisma migrate deploy"
+
 [http_service]
   internal_port = 80
   force_https = true
