--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-NODE_ENV=production
-DATABASE_URL=postgresql://postgres:pdw@123@db:5432/gateway
-PORT=3000
-JWT_SECRET=seu-jwt-secret-aqui
-JWT_EXPIRES_IN=7d
-POSTGRES_PASSWORD=pdw@123
+DATABASE_URL=postgresql://postgres:pdw@123@localhost:5432/gateway
+JWT_SECRET=1234567890
+JWT_EXPIRES_IN=1h
+PORT=80
+NODE_ENV=development
+
+URL_TRANSFEERA=https://api-sandbox.transfeera.com
+TRANSFEERA_CLIENT_ID=2e1cd07a-656c-40f0-9ef7-a60c62b1da53
+TRANSFEERA_CLIENT_SECRET=dfe55644-14e2-448a-9347-174cbd0f51e6ca311567-de76-461c-b3f3-7a3fe4132ea7
