--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.3.0",
     "argon2": "^0.44.0",
+    "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.1",
     "fastify-type-provider-zod": "^6.1.0",
